# de-classifier

./: .gitignore  README.md  docket_entries.csv  labeled.csv  labels.json  labels3.json  prepare_nltk.py  pyproject.toml
de_classifier/: classify.py  classify3.py  dc_example.py  get_docket_entries.py  labeler.py  labeler3.py
