[tool.poetry]
authors = ["Free Law Project <info@free.law>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Classify docket entries"
keywords = ["legal", "courts"]
license = "BSD-2-Clause"
maintainers = ["Free Law Project <info@free.law>"]
name = "de-classifier"
readme = "README.md"
repository = "https://github.com/freelawproject/de-classifier"
version = "0.0.1"

[tool.poetry.urls]
"Organisation Homepage" = "https://free.law/"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
nltk = "^3.9.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
prompt-toolkit = "^3.0.48"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
isort = "^5.11.5"
mypy = "^0.991"
pylint = "^2.13.9"
wheel = "^0.45.1"
pre-commit = "^4.1.0"
flynt = "^0.77"

[tool.black]
include = '''.*\.pyi?$'''
line-length = 79


[tool.isort]
profile = "black"
line_length = 79

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "79"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
